--- a/dashboard-products-details.html
+++ b/dashboard-products-details.html
@@ -22,7 +22,7 @@
           <img src="/images/dashboard-store-logo.svg" alt="" class="my-4" />
         </div>
         <div class="list-group list-group-flush">
-          <a href="/dashboard.html" class="list-group-item list-group-item-action active">
+          <a href="/dashboard.html" class="list-group-item list-group-item-action">
             Dashboard
           </a>
           <a href="/dashboard-products.html" class="list-group-item list-group-item-action">
@@ -31,7 +31,7 @@
           <a href="/dashboard-transactions.html" class="list-group-item list-group-item-action">
             Transactions
           </a>
-          <a href="/dashboard-settings.html" class="list-group-item list-group-item-action">
+          <a href="/dashboard-settings.html" class="list-group-item list-group-item-action active">
             Store Settings
           </a>
           <a href="/dashboard-account.html" class="list-group-item list-group-item-action">
@@ -99,102 +99,90 @@
         <div class="section-content section-dashboard-home" data-aos="fade-up">
           <div class="container-fluid">
             <div class="dashboard-heading">
-              <h2 class="dashboard-title">Dashboard</h2>
-              <p class="dashboard-subtitle">Look What you have made today!</p>
+              <h2 class="dashboard-title">Machiatto</h2>
+              <p class="dashboard-subtitle">Product Details</p>
             </div>
             <div class="dashboard-content">
               <div class="row">
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Customer</div>
-                      <div class="dashboard-card-subtitle">15,209</div>
+                <div class="col-12">
+                  <form action="">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <label for="">Product Name</label>
+                              <input type="text" class="form-control" value="Machiato" />
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <label for="">Price</label>
+                              <input type="number" class="form-control" value="120000" />
+                            </div>
+                          </div>
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <label for="">Kategori</label>
+                              <select name="category" class="form-control">
+                                <option value="" disabled>Select Category</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <label for="">Description</label>
+                              <textarea name="editor"></textarea>
+                            </div>
+                          </div>
+
+                        </div>
+                        <div class="row">
+                          <div class="col text-right">
+                            <button type="submit" class="btn btn-success px-5 btn-block">Save Now</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Revenue</div>
-                      <div class="dashboard-card-subtitle">$931,290</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Transaction</div>
-                      <div class="dashboard-card-subtitle">22,409,399</div>
-                    </div>
-                  </div>
+                  </form>
                 </div>
               </div>
-              <div class="row mt-3">
-                <div class="col-12 mt-2">
-                  <h5 class="mb-3">Recent Transaction</h5>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
+              <div class="row">
+                <div class="col-12">
+                  <div class="card">
                     <div class="card-body">
                       <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-1.png" alt="">
+                        <div class="col-md-4">
+                          <div class="gallery-container">
+                            <img src="/images/product-card-1.png" alt="" class="w-100">
+                            <a href="" class="delete-gallery">
+                              <img src="/images/icon-delete.svg" alt="">
+                            </a>
+                          </div>
                         </div>
                         <div class="col-md-4">
-                          Machiatto
+                          <div class="gallery-container">
+                            <img src="/images/product-card-2.png" alt="" class="w-100">
+                            <a href="" class="delete-gallery">
+                              <img src="/images/icon-delete.svg" alt="">
+                            </a>
+                          </div>
                         </div>
-                        <div class="col-md-3">
-                          Reynandi
+                        <div class="col-md-4">
+                          <div class="gallery-container">
+                            <img src="/images/product-card-3.png" alt="" class="w-100">
+                            <a href="" class="delete-gallery">
+                              <img src="/images/icon-delete.svg" alt="">
+                            </a>
+                          </div>
                         </div>
-                        <div class="col-md-3">
-                          12 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
+                        <div class="col-12">
+                          <input type="file" id="file" style="display: none;" multiple>
+                          <buttn class="btn btn-secondary btn-block mt-2" onclick="thisFileUpload()">Add Photo</buttn>
                         </div>
                       </div>
                     </div>
-                  </a>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-2.png" alt="">
-                        </div>
-                        <div class="col-md-4">
-                          LeBrone X
-                        </div>
-                        <div class="col-md-3">
-                          Aca
-                        </div>
-                        <div class="col-md-3">
-                          18 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
-                        </div>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-3.png" alt="">
-                        </div>
-                        <div class="col-md-4">
-                          Sofa Margarine
-                        </div>
-                        <div class="col-md-3">
-                          Joni Gimanh
-                        </div>
-                        <div class="col-md-3">
-                          18 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
-                        </div>
-                      </div>
-                    </div>
-                  </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -218,6 +206,15 @@
       e.preventDefault();
       $("#wrapper").toggleClass("toggled");
     });
+  </script>
+  <script src="https://cdn.ckeditor.com/4.19.0/standard/ckeditor.js"></script>
+  <script>
+    function thisFileUpload() {
+      document.getElementById("file").click();
+    }
+  </script>
+  <script>
+    CKEDITOR.replace('editor');
   </script>
 </body>
 
