--- a/dashboard-products.html
+++ b/dashboard-products.html
@@ -22,10 +22,10 @@
           <img src="/images/dashboard-store-logo.svg" alt="" class="my-4" />
         </div>
         <div class="list-group list-group-flush">
-          <a href="/dashboard.html" class="list-group-item list-group-item-action active">
+          <a href="/dashboard.html" class="list-group-item list-group-item-action ">
             Dashboard
           </a>
-          <a href="/dashboard-products.html" class="list-group-item list-group-item-action">
+          <a href="/dashboard-products.html" class="list-group-item list-group-item-action active">
             My Products
           </a>
           <a href="/dashboard-transactions.html" class="list-group-item list-group-item-action">
@@ -99,100 +99,81 @@
         <div class="section-content section-dashboard-home" data-aos="fade-up">
           <div class="container-fluid">
             <div class="dashboard-heading">
-              <h2 class="dashboard-title">Dashboard</h2>
-              <p class="dashboard-subtitle">Look What you have made today!</p>
+              <h2 class="dashboard-title">My Products</h2>
+              <p class="dashboard-subtitle">Manage it well and get money</p>
             </div>
             <div class="dashboard-content">
               <div class="row">
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Customer</div>
-                      <div class="dashboard-card-subtitle">15,209</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Revenue</div>
-                      <div class="dashboard-card-subtitle">$931,290</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Transaction</div>
-                      <div class="dashboard-card-subtitle">22,409,399</div>
-                    </div>
-                  </div>
+                <div class="col-12">
+                  <a href="/dashboard-products-create.html" class="btn btn-success">
+                    Add New Products
+                  </a>
                 </div>
               </div>
-              <div class="row mt-3">
-                <div class="col-12 mt-2">
-                  <h5 class="mb-3">Recent Transaction</h5>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
+              <div class="row mt-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <a href="/dashboard-products-details.html" class="card card-dashboard-product d-block">
                     <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-1.png" alt="">
-                        </div>
-                        <div class="col-md-4">
-                          Machiatto
-                        </div>
-                        <div class="col-md-3">
-                          Reynandi
-                        </div>
-                        <div class="col-md-3">
-                          12 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
-                        </div>
+                      <img src="/images/product-card-1.png" alt="" class="w-100 mb-2">
+                      <div class="product-title">
+                        Machiatto
                       </div>
+                      <div class="product-category">Foods</div>
                     </div>
                   </a>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <a href="/dashboard-products-details.html" class="card card-dashboard-product d-block">
                     <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-2.png" alt="">
-                        </div>
-                        <div class="col-md-4">
-                          LeBrone X
-                        </div>
-                        <div class="col-md-3">
-                          Aca
-                        </div>
-                        <div class="col-md-3">
-                          18 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
-                        </div>
+                      <img src="/images/product-card-2.png" alt="" class="w-100 mb-2">
+                      <div class="product-title">
+                        Machiatto
                       </div>
+                      <div class="product-category">Foods</div>
                     </div>
                   </a>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <a href="/dashboard-products-details.html" class="card card-dashboard-product d-block">
                     <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-3.png" alt="">
-                        </div>
-                        <div class="col-md-4">
-                          Sofa Margarine
-                        </div>
-                        <div class="col-md-3">
-                          Joni Gimanh
-                        </div>
-                        <div class="col-md-3">
-                          18 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
-                        </div>
+                      <img src="/images/product-card-3.png" alt="" class="w-100 mb-2">
+                      <div class="product-title">
+                        Machiatto
                       </div>
+                      <div class="product-category">Foods</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <a href="/dashboard-products-details.html" class="card card-dashboard-product d-block">
+                    <div class="card-body">
+                      <img src="/images/product-card-4.png" alt="" class="w-100 mb-2">
+                      <div class="product-title">
+                        Machiatto
+                      </div>
+                      <div class="product-category">Foods</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <a href="/dashboard-products-details.html" class="card card-dashboard-product d-block">
+                    <div class="card-body">
+                      <img src="/images/product-card-5.png" alt="" class="w-100 mb-2">
+                      <div class="product-title">
+                        Machiatto
+                      </div>
+                      <div class="product-category">Foods</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <a href="/dashboard-products-details.html" class="card card-dashboard-product d-block">
+                    <div class="card-body">
+                      <img src="/images/product-card-1.png" alt="" class="w-100 mb-2">
+                      <div class="product-title">
+                        Machiatto
+                      </div>
+                      <div class="product-category">Foods</div>
                     </div>
                   </a>
                 </div>
