--- a/dashboard-settings.html
+++ b/dashboard-settings.html
@@ -22,7 +22,7 @@
           <img src="/images/dashboard-store-logo.svg" alt="" class="my-4" />
         </div>
         <div class="list-group list-group-flush">
-          <a href="/dashboard.html" class="list-group-item list-group-item-action active">
+          <a href="/dashboard.html" class="list-group-item list-group-item-action">
             Dashboard
           </a>
           <a href="/dashboard-products.html" class="list-group-item list-group-item-action">
@@ -31,7 +31,7 @@
           <a href="/dashboard-transactions.html" class="list-group-item list-group-item-action">
             Transactions
           </a>
-          <a href="/dashboard-settings.html" class="list-group-item list-group-item-action">
+          <a href="/dashboard-settings.html" class="list-group-item list-group-item-action active">
             Store Settings
           </a>
           <a href="/dashboard-account.html" class="list-group-item list-group-item-action">
@@ -99,102 +99,59 @@
         <div class="section-content section-dashboard-home" data-aos="fade-up">
           <div class="container-fluid">
             <div class="dashboard-heading">
-              <h2 class="dashboard-title">Dashboard</h2>
-              <p class="dashboard-subtitle">Look What you have made today!</p>
+              <h2 class="dashboard-title">Store Settings</h2>
+              <p class="dashboard-subtitle">Make store that profitable</p>
             </div>
             <div class="dashboard-content">
               <div class="row">
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Customer</div>
-                      <div class="dashboard-card-subtitle">15,209</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Revenue</div>
-                      <div class="dashboard-card-subtitle">$931,290</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Transaction</div>
-                      <div class="dashboard-card-subtitle">22,409,399</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-3">
-                <div class="col-12 mt-2">
-                  <h5 class="mb-3">Recent Transaction</h5>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-1.png" alt="">
+                <div class="col-12">
+                  <form action="">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <label for="">Store Name</label>
+                              <input type="text" class="form-control" />
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group" v-if="is_store_open">
+                              <label for="">Kategori</label>
+                              <select name="category" class="form-control">
+                                <option value="" disabled>Select Category</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <label for="">Store</label>
+                              <p class="text-muted">Apakah anda juga ingin membuka toko?</p>
+                              <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" name="is_store_open" id="openStoreTrue"
+                                  value="true" />
+                                <label for="openStoreTrue" class="custom-control-label">
+                                  Buka
+                                </label>
+                              </div>
+                              <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" name="is_store_open"
+                                  id="openStoreFalse" value="false" />
+                                <label for="openStoreFalse" class="custom-control-label">
+                                  Sementara Tutup
+                                </label>
+                              </div>
+                            </div>
+                          </div>
                         </div>
-                        <div class="col-md-4">
-                          Machiatto
-                        </div>
-                        <div class="col-md-3">
-                          Reynandi
-                        </div>
-                        <div class="col-md-3">
-                          12 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
-                        </div>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-2.png" alt="">
-                        </div>
-                        <div class="col-md-4">
-                          LeBrone X
-                        </div>
-                        <div class="col-md-3">
-                          Aca
-                        </div>
-                        <div class="col-md-3">
-                          18 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
+                        <div class="row">
+                          <div class="col text-right">
+                            <button type="submit" class="btn btn-success px-5">Save Now</button>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </a>
-                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-1">
-                          <img src="/images/dashboard-icon-product-3.png" alt="">
-                        </div>
-                        <div class="col-md-4">
-                          Sofa Margarine
-                        </div>
-                        <div class="col-md-3">
-                          Joni Gimanh
-                        </div>
-                        <div class="col-md-3">
-                          18 January, 2022
-                        </div>
-                        <div class="col-md-1 d-none d-md-block">
-                          <img src="/images/dashboard-arrow-right.svg" alt="">
-                        </div>
-                      </div>
-                    </div>
-                  </a>
+                  </form>
                 </div>
               </div>
             </div>
