--- a/dashboard-transactions.html
+++ b/dashboard-transactions.html
@@ -22,13 +22,13 @@
           <img src="/images/dashboard-store-logo.svg" alt="" class="my-4" />
         </div>
         <div class="list-group list-group-flush">
-          <a href="/dashboard.html" class="list-group-item list-group-item-action active">
+          <a href="/dashboard.html" class="list-group-item list-group-item-action">
             Dashboard
           </a>
           <a href="/dashboard-products.html" class="list-group-item list-group-item-action">
             My Products
           </a>
-          <a href="/dashboard-transactions.html" class="list-group-item list-group-item-action">
+          <a href="/dashboard-transactions.html" class="list-group-item list-group-item-action active">
             Transactions
           </a>
           <a href="/dashboard-settings.html" class="list-group-item list-group-item-action">
@@ -99,39 +99,22 @@
         <div class="section-content section-dashboard-home" data-aos="fade-up">
           <div class="container-fluid">
             <div class="dashboard-heading">
-              <h2 class="dashboard-title">Dashboard</h2>
-              <p class="dashboard-subtitle">Look What you have made today!</p>
+              <h2 class="dashboard-title">Transactions</h2>
+              <p class="dashboard-subtitle">Big result start from the small one!</p>
             </div>
             <div class="dashboard-content">
-              <div class="row">
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Customer</div>
-                      <div class="dashboard-card-subtitle">15,209</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Revenue</div>
-                      <div class="dashboard-card-subtitle">$931,290</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-2">
-                    <div class="card-body">
-                      <div class="dashboard-card-title">Transaction</div>
-                      <div class="dashboard-card-subtitle">22,409,399</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-3">
-                <div class="col-12 mt-2">
-                  <h5 class="mb-3">Recent Transaction</h5>
+              <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
+                    aria-controls="pills-home" aria-selected="true">Sell Product</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
+                    aria-controls="pills-profile" aria-selected="false">Buy Product</a>
+                </li>
+              </ul>
+              <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                   <a href="/dashboard-transaction-details.html" class="card card-list d-block">
                     <div class="card-body">
                       <div class="row">
@@ -196,7 +179,34 @@
                     </div>
                   </a>
                 </div>
+                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...
+                  <a href="/dashboard-transaction-details.html" class="card card-list d-block">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col-md-1">
+                          <img src="/images/dashboard-icon-product-1.png" alt="">
+                        </div>
+                        <div class="col-md-4">
+                          Machiatto
+                        </div>
+                        <div class="col-md-3">
+                          Reynandi
+                        </div>
+                        <div class="col-md-3">
+                          12 January, 2022
+                        </div>
+                        <div class="col-md-1 d-none d-md-block">
+                          <img src="/images/dashboard-arrow-right.svg" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+
+                </div>
               </div>
+
+
+
             </div>
           </div>
         </div>
